# nucleo_quickstart_rtt

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: prerequisites.md
examples/: blinky.rs  rtt_hello_world.rs
src/: placeholder.rs
