[package]
name = "nucleo_quickstart_rtt"
version = "0.1.0"
edition = "2021"
readme = "README.md"


[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432", "unproven", "stm32-usbd"] }

# debug
panic-rtt-target = { version  = "0.1.2", features = ["cortex-m"] }
rtt-target = { version  = "0.4.0"}